# stage-left

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js  usage.html
.github/workflows/: build_docs.yml  deploy_docs.yml  test.yml
_sources/: index.md.txt  reference.md.txt
docs/source/: conf.py  index.md  reference.md  usage.md
stage_left/: __init__.py  __version__.py  date_parsers.py  date_patterns.py  formatters.py  parser.py  tag_patterns.py  types.py
tests/: test_date_parsers.py  test_due_dates.py  test_formatting.py  test_groups.py  test_integration.py  test_items.py  test_priorities.py  test_stage_left.py  test_tags.py
tests/fixtures/: example.xit
