[tool.poetry]
name = "stage-left"
version = "0.2.2"
description = "Parse [x]it! documents into python data structures"
authors = ["chris48s"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chris48s/stage-left"
homepage = "https://github.com/chris48s/stage-left"
documentation = "https://chris48s.github.io/stage-left"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]
isort = "^5.13"
flake8 = { version = "^6.1.0", python = "^3.8.1" }
black = "==23.12.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
sphinx = "^7.1.2"
sphinx-autodoc-typehints = "^1.25"
sphinx_rtd_theme = "^2.0.0"
myst-parser = "^2.0.0"
ghp-import = "^2.1.0"

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.core.masonry.api"
