[project]
name = "stage-left"
version = "0.3.0"
description = "Parse [x]it! documents into python data structures"
authors = [{name = "chris48s"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Home = "https://github.com/chris48s/stage-left"
Source = "https://github.com/chris48s/stage-left"
Documentation = "https://chris48s.github.io/stage-left"

[tool.poetry.group.dev.dependencies]
isort = "7.0.0"
flake8 = "7.3.0"
black = "25.9.0"
pytest = "8.4.2"
pytest-cov = "7.0.0"
sphinx = "8.1.3"
sphinx-autodoc-typehints = "3.0.1"
sphinx_rtd_theme = "3.0.2"
myst-parser = "4.0.1"
ghp-import = "2.1.0"

[tool.poetry]
requires-poetry = ">=2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
